--- a/2.5D_seismicWaveformClassification.ipynb
+++ b/2.5D_seismicWaveformClassification.ipynb
@@ -5,7 +5,7 @@
    "id": "31a86188",
    "metadata": {},
    "source": [
-    "# Papers with Code: Unsupervised Seismic Waveform Classificatio"
+    "# Papers with Code: Unsupervised Seismic Waveform Classification"
    ]
   },
   {
