--- a/3D_seismicWaveformClassification.ipynb
+++ b/3D_seismicWaveformClassification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Papers with Code: Unsupervised Seismic Waveform Classificatio"
+    "# Papers with Code: Unsupervised Seismic Waveform Classification"
    ]
   },
   {
@@ -372,6 +372,13 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
